[gd_scene load_steps=21 format=3 uid="uid://3t1clwlip3hs"]

[ext_resource type="Script" uid="uid://bx625ifkjf3qb" path="res://Scenes/coin.gd" id="1_jgi06"]
[ext_resource type="Texture2D" uid="uid://pe2x0mxugkch" path="res://Assets/coin.png" id="2_g537i"]
[ext_resource type="AudioStream" uid="uid://kdpyhgk1f7kx" path="res://Assets/Sound/coin.wav" id="3_g537i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h2p6v"]
atlas = ExtResource("2_g537i")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffmqm"]
atlas = ExtResource("2_g537i")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_81h6x"]
atlas = ExtResource("2_g537i")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbp07"]
atlas = ExtResource("2_g537i")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2l7mo"]
atlas = ExtResource("2_g537i")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q30xt"]
atlas = ExtResource("2_g537i")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w2r2"]
atlas = ExtResource("2_g537i")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tthw5"]
atlas = ExtResource("2_g537i")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pu15"]
atlas = ExtResource("2_g537i")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgc30"]
atlas = ExtResource("2_g537i")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtgto"]
atlas = ExtResource("2_g537i")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m55n1"]
atlas = ExtResource("2_g537i")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wm60r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2p6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffmqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81h6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbp07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2l7mo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q30xt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w2r2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tthw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pu15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgc30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtgto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m55n1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffmqm")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbp07")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q30xt")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tthw5")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgc30")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m55n1")
}],
"loop": true,
"name": &"despawn",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_jgi06"]
radius = 16.0

[sub_resource type="Animation" id="Animation_h2p6v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_g537i"]
resource_name = "pickup"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ffmqm"]
_data = {
&"RESET": SubResource("Animation_h2p6v"),
&"pickup": SubResource("Animation_g537i")
}

[node name="Coin" type="Area2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource("1_jgi06")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_wm60r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jgi06")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_g537i")
volume_db = -2.0
pitch_scale = 0.96
max_distance = 1125.0
bus = &"Sound Effects"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ffmqm")
}

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="DespawnAnimationTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
[connection signal="timeout" from="DespawnAnimationTimer" to="." method="_on_despawn_animation_timer_timeout"]
